syntax="proto3";

package company_service;
option go_package ="genproto/company_service";

import "company_models.proto";

message Company {
    string id = 1;
    int64 usdot = 2;
    string time_zone = 3;
    string title = 4;
    string company_address = 5;
    string terminal_address = 6;
    string email = 7; 
    string phone_number = 8;
    string accounting_email = 9;
    string logo = 10;
    string safety_email = 11;
    string status = 12;
    string status_change_reason = 13;
    string note = 14;
    string created_at = 15;
    string updated_at = 16;
    string token = 17;
    Object user = 18;
}

message CompanyList {
    int32 count = 1;
    repeated Company items = 2;
}

message CompanyUser {
    string id = 1;
    string company_id = 2;
    string email = 3;
    string role_id = 4;
    string role_name = 5;
    string user_id = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CompanyUserResponse {
    string id = 1;
    string company_id = 2;
    string company_name = 3;
    string email = 4;
    string role_id = 5;
    string role_name = 6;
    string user_id = 7;
    string user_name = 8;
    string first_name = 9;
    string last_name = 10;
    string created_at = 11;
    string updated_at = 12;
    int32 usdot = 13;
    string company_email = 14;
    string company_phone_number = 15;
    string company_address = 16;
}

message CompanyUserUpdate {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string role_id = 4;
    string email = 5;
    string user_id = 6;

}

message CompanyUserList {
    int32 count = 1;
    repeated CompanyUserResponse items = 2;
}

message Invitation {
    string id = 1;
    string email = 2; 
    Object Company = 3;
    string role_id = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message InvitationUpdateStatus {
    string id = 1;
    string status = 2;
}

message UpdateMessage {
    map<string, string> string_values = 1;
    map<string, int32> int_values = 2;
    map<string, bool> bool_values = 3;
}
